# inception2

include/device/: device.hpp
include/inception/CodeInv/: Decompiler.h  Disassembler.h  FractureMemoryObject.h  FractureSymbol.h  StrippedDisassembler.h  SymbolsTable.h
include/inception/Utils/: Builder.h  IContext.h
include/proto/: tbb_parser.hpp  tmr_parser.hpp
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt  ExecutionState.cpp  Executor.cpp  Executor.h  Searcher.cpp  Searcher.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  UserSearcher.cpp
lib/Device/: CMakeLists.txt  device.cpp
lib/Inception/CodeInv/: CMakeLists.txt  Decompiler.cpp  Disassembler.cpp  FractureMemoryObject.cpp  FractureSymbol.cpp  MCDirector.cpp  StrippedDisassembler.cpp  StrippedGraph.cpp
lib/Inception/Transforms/: CMakeLists.txt
lib/Inception/Transforms/BreakConstantGEP/: BreakConstantGEP.cpp
lib/Inception/Transforms/BreakConstantPtrToInt/: BreakConstantPtrToInt.cpp
lib/Inception/Transforms/NameRecovery/: NameRecovery.cpp
lib/Inception/Transforms/TypeRecovery/: TypeRecovery.cpp
lib/Inception/Utils/: ABIAdapter.cpp  Builder.cpp  CMakeLists.txt  IContext.cpp  utils.cpp
lib/Module/: KModule.cpp
lib/Proto/: CMakeLists.txt  tbb_parser.cpp  tmr_parser.cpp
lib/device/: device.cpp
runtime/: CMakeLists.txt
runtime/Fortify/: fortify.c
tools/: CMakeLists.txt
tools/inception/: CMakeLists.txt  CollisionSolver.h  FunctionsHelperWriter.cpp  FunctionsHelperWriter.h  IRMerger.cpp  SectionsWriter.h  StackAllocator.h  device.cpp  inception.cc  inception.hpp  inception_executor.cc  inception_executor.hpp  klee-handler.cpp  klee-handler.hpp  main.cc
tools/inception/helper_functions/: functions_helper_writer.cpp
tools/inception/passes/: ir_merger.cpp  ir_merger.h
tools/inception/utils/: dummy_object_file.cpp  interrupt_support.h
tools/terrace/: CMakeLists.txt  klee-handler.cpp  main.cc  terrace.cc  terrace.hpp
tools/terrace/passes/BreakIntToPtr/: BreakIntToPtr.cpp  BreakIntToPtr.hpp
tools/terrace/passes/CleanFunctions/: CleanFunctions.cpp  CleanFunctions.hpp
tools/terrace/passes/Utils/: Utils.cpp  Utils.h
